# aitomatic-cli

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  DEVELOPING.md  LICENSE  MANIFEST.in  README.md  aitomatic.py  auto_complete_install.sh  post_install.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: user_guide.html  user_guide.md
src/: _version.py  aito.py  aitomatic.py  cli.py  constants.py  utils.py
src/aitomatic/api/: .tuning_utils.py.swp  __init__.py  aitomatic.py  build.py  client.py  model_params.py  tuning_utils.py  web_model.py
src/aitomatic/deploy/: main.py
src/aitomatic/dsl/: arl_conclusions.py  arl_features.py  arl_handler.py  arl_rules.py  utils.py
src/aitomatic/execute/: main.py
src/aitomatic/list/: main.py
src/aitomatic/login/: server.py
src/aitomatic/logs/: main.py
src/aitomatic/objects/: dataset.py  model.py
src/aitomatic/run/: main.py
src/api/: aitomatic.py
src/app/: cli.py  deploy.py  execute.py  main.py
src/create/: app.py  main.py  project.py
src/deploy/: app.py  main.py
src/execute/: app.py  main.py
src/list/: apps.py  jobs.py  main.py
src/login/: cli.py  main.py  server.py
src/logout/: main.py
src/logs/: main.py
src/run/: main.py
src/train/: main.py  train.py
