[metadata]
name = aitomatic
version = file: version.txt
author = Pham Hoang Tuan
author_email = tuan@aitomatic.com
description = aitomatic CLI to manage projects and apps
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aitomatic/aitomatic-cli
project_urls =
    Bug Tracker = https://github.com/aitomatic/aitomatic-cli/issues
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = 
    src
    src.deploy
    src.execute
    src.login
    src.api
install_requires = 
    click == 8.0.4
    requests == 2.27.1
python_requires = >=3.7

[options.entry_points]
console_scripts =
    aito = src.aito:cli
