[metadata]
name = aitomatic
version = file: version.txt
author = Pham Hoang Tuan
author_email = tuan@aitomatic.com
description = aitomatic library to interact with Aitomatic product
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aitomatic/aitomatic-cli
project_urls =
    Bug Tracker = https://github.com/aitomatic/aitomatic-cli/issues
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
install_requires = 
    requests == 2.27.1
    numpy >= 1.23.4
    pandas >= 1.5.1
    tqdm >= 4.64.1
python_requires = >=3.7

[options.packages.find]
where=src
